@@ -17,6 +17,10 @@
 #include <Ecore.h>
 #include <Ecore_File.h>
 
+/* define macros and variable for using the eina logging system  */
+#define EFREET_MODULE_LOG_DOM _efreet_cache_log_dom
+static int _efreet_cache_log_dom = -1;
+
 #include "Efreet.h"
 #include "efreet_private.h"
 #include "efreet_cache_private.h"
@@ -28,13 +32,6 @@ struct _Efreet_Old_Cache
     Eina_Hash *hash;
     Eet_File *ef;
 };
-
-#ifdef EFREET_MODULE_LOG_DOM
-#undef EFREET_MODULE_LOG_DOM
-#endif
-#define EFREET_MODULE_LOG_DOM _efreet_cache_log_dom
-
-static int _efreet_cache_log_dom = -1;
 
 /**
  * Data for cache files
